--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ body {
     padding: 24px;
     border-radius: 8px;
     box-shadow: 10px 10px 0 1px hsl(0, 0%, 7%);
+    border: 1px solid black;
 }
 
 .top {
